<resources>
    <string name="home">Home</string>
    <string name="services">Services</string>
    <string name="about">About</string>
    <string name="deliver">Deliver</string>
    <string name="contact">Contact</string>
    <string name="share">Share</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_profile">My account</string>
    <string name="opening_hours">Opening hours</string>
    <string name="Call">Call</string>


</resources>